@@ -4154,7 +4154,7 @@ static int need_to_update_have_min_dir_info = 1;
 int
 router_have_minimum_dir_info(void)
 {
-  if (need_to_update_have_min_dir_info) {
+  if (PREDICT_FALSE(need_to_update_have_min_dir_info)) {
     update_router_have_minimum_dir_info();
     need_to_update_have_min_dir_info = 0;
   }
